# Qwen3-0.6B

./: .gitignore  Cargo.toml  README.md
data/rewrite_sft/: test.jsonl  train.jsonl  valid.jsonl
docs/: lora-finetune-report.md  text-rewrite-evaluation.md
rust-reference/: c_api_rewrite.rs  context_rewrite.rs  text_rewrite.rs
scripts/: benchmark_fused_lora_100.py  benchmark_lora_100.py  benchmark_rewrite_models.py  benchmark_rewrite_v2.py  benchmark_rewrite_v3.py  benchmark_rewrite_v4.py  benchmark_rewrite_v5.py  generate_finetune_data.py  test_cases_100.py  test_lora_chat.py  test_rewrite_int8_vs_bf16.py  test_text_rewrite.py
src/: lib.rs  rewrite_ctx.rs  text_rewrite.rs
